<resources>
    <string name="app_name">Emergency Responder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_button_text">Continue</string>
    <string name="crash_detection_title">Crash Detection</string>
    <string name="drive_safer_stay_safer">Drive Smarter, Stay Safer</string>
    <string name="welocome_to_co_pilot">Welcome to your new co-pilot for peace of mind in the road. Let’s get you set up for a safer journey</string>
    <string name="automatic_crash">Automatic Crash Detection</string>
    <string name="using_sensor_automatic_crash_detection">Using your phone’s sensors, we can detect a potential crash and automatically send for help when you need it most.</string>
    <string name="notify_your_loved_ones">Notify Your Loved Ones</string>
    <string name="incase_of_accident">In case of an incident, your pre-selected emergency contacts will be automatically notified with your location.</string>
    <string name="enable_location">Enable Location to Detect Accidents</string>
    <string name="precise_always_on_location">In case of an incident, your pre-selected emergency contacts will be automatically notified with your location.</string>
    <string name="Login">Login </string>
    <string name="enter_your_email_and_password">Enter your email and password to login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me"> Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="or_login_with">Or Login With</string>
    <string name="register"> Register</string>
    <string name="don_t_have_an_account">Don’t have an account?  </string>
    <string name="sign_up">Sign Up</string>
    <string name="register_to_your_account">Register to your account</string>
    <string name="join_to_enable_instant_safety">Join to enable instant safety alerts while driving.</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency">Emergency</string>
    <string name="responder">Responder</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="add_more_contacts">Add More Contacts</string>
    <string name="already_have_an_account">Already have an account?  </string>
    <string name="login">Login</string>
    <string name="enter_your_email_and_we_will_send_you_a_link_to_reset_it_securely">Enter your email, and we\'ll send you a link to reset it securely</string>
    <string name="safety_dashboard">Safety Dashboard</string>
    <string name="voice">voice</string>
    <string name="acceleration">Acceleration      </string>
    <string name="stability">Phone Stability</string>
    <string name="phone_stability">Stability</string>
    <string name="trip_time">Trip Time</string>
    <string name="stable">Stable</string>
    <string name="speed">Speed</string>
    <string name="high">High</string>
    <string name="detail_member">Members Detail</string>
    <string name="see_all">See all</string>
    <string name="nearby_services">Nearby Services</string>
    <string name="ambulance">Ambulance</string>
    <string name="police_station">Police Station</string>
    <string name="sos">SOS</string>
    <string name="start_travelling">Start Traveling</string>
    <string name="stop_travelling">Stop Traveling</string>
    <string name="contacts">Contants</string>
    <string name="are_you_okay">Are you OK?</string>
    <string name="if_you_do_not_respond_we_will_automatically_notify_your_emergency_contacts">If you don’t respond, we wil automatically notify your emergency contacts.</string>
    <string name="am_okay">I’m OK / Cancel Alert</string>
    <string name="send_alert">Send Alert Now</string>
    <string name="logout">Logout</string>


    <string name="default_web_client_id">646296022035-5oqgl20lnqmbe56jnlkl9995m14i86fa.apps.googleusercontent.com </string>

    <string name="accessibility_service_desc">
    Emergency shortcut service for detecting power button presses.
</string>
    <string name="save_changing">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="update">UPDATE</string>

    <string name="success">Success</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="password_updated">Password Updated</string>
    <string name="verify_your_email">Verify your new email</string>
    <string name="email_or_password_incorrect">Email or password is incorrect.</string>
    <string name="err_name_short">Name must be at least 3 characters long</string>
    <string name="err_generic">Something went wrong. Please try again.</string>

    <string name="err_name_required">Name is required</string>
    <string name="err_phone_required">Phone is required</string>
    <string name="err_invalid_phone">Invalid phone format</string>
    <string name="err_failed_add">Could not add contact</string>
    <string name="err_failed_delete">Could not delete contact</string>
    <string name="err_network">Network issues, please try again</string>
    <string name="msg_contact_deleted">Contact deleted</string>

    <string name="dialog_delete_title">Delete Contact</string>
    <string name="dialog_delete_msg">Are you sure you want to delete %1$s?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="login_failed">Login Failed</string>
    <string name="failed_to_sent_reset_email">Failed to send reset email</string>
    <string name="account_created_verify_email">Account created! Please verify your email.</string>

    <string name="mic_permission_granted">Mic permission granted</string>
    <string name="mic_permission_required">Mic permission required</string>
    <string name="location_permission_required">Location permission required</string>

    <string name="default_user_name">User</string>
    <string name="welcome_user">Welcome, %1$s</string>

    <string name="audio_emergency_detected_title">Emergency sound detected</string>
    <string name="audio_emergency_detected_body">Emergency response triggered for %1$s.</string>

    <string name="sos_recording_in_progress">Recording emergency audio…</string>
    <string name="whatsapp_sos_sent">WhatsApp SOS sent (%1$d)</string>
    <string name="whatsapp_not_installed">WhatsApp not installed</string>

    <string name="opening_whatsapp">Opening WhatsApp…</string>
    <string name="snatch_guard_active">Snatch Guard is Active</string>
    <string name="system_active">SYSTEM ACTIVE</string>
    <string name="not_active">NOT ACTIVE</string>
    <string name="enable_notifications_full_protection">Please enable notifications for full protection</string>
    <string name="sensitivity_updated">Sensitivity updated to %1$s</string>

    <string name="google_sign_in_cancelled">Google Sign-In cancelled</string>
    <string name="sms_permission_granted">SMS permission granted</string>
    <string name="reset_link_sent">Reset link sent to your email!</string>
    <string name="seconds_remaining">%1$ds</string>

</resources>