<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/emergency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/emergency_contacts"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/emergency_Contact_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_text">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomSubText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/background_shadow"
            android:backgroundTint="@color/background_shadow"
            android:hint="@string/enter_name"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/hint_color"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintTextColor="@color/primaryBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_shadow"
                android:minHeight="0dp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                tools:ignore="DuplicateIds" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/emergency_Contact"
        app:cardElevation="0dp"
        android:padding="5dp"
        android:layout_margin="20dp"
        app:cardUseCompatPadding="false"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/emergency_Contact_Name">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            style="@style/CustomSubText"
            app:hintTextColor="@color/primaryBlue"
            android:hint="@string/enter_mobile_number"
            app:boxBackgroundMode="none"
            android:backgroundTint="@color/background_shadow"
            android:paddingBottom="10dp"
            app:hintAnimationEnabled="false"
            android:paddingRight="10dp"
            android:background="@color/background_shadow"
            android:textColorHint="@color/hint_color"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/emergency_Contact_Phone"
                android:maxLines="1"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:textColorHint="@color/hint_color"
                android:background="@color/background_shadow"
                android:minHeight="0dp"/>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>