<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="20dp">


    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/app_logo"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/layoutImage">

        <androidx.cardview.widget.CardView
            android:id="@+id/userName_card"
            app:cardElevation="0dp"
            android:padding="5dp"
            app:cardUseCompatPadding="false"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                style="@style/CustomSubText"
                app:hintTextColor="@color/primaryBlue"
                android:hint="@string/enter_name"
                app:boxBackgroundMode="none"
                android:backgroundTint="@color/background_shadow"
                android:paddingBottom="10dp"
                app:hintAnimationEnabled="false"
                android:paddingRight="10dp"
                android:background="@color/background_shadow"
                android:textColorHint="@color/hint_color"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/userNameEditText"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:textSize="14sp"
                    android:textColorHint="@color/hint_color"
                    android:background="@color/background_shadow"
                    android:minHeight="0dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email_card"
            app:cardElevation="0dp"
            android:padding="5dp"
            app:cardUseCompatPadding="false"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:layout_constraintTop_toBottomOf="@+id/userName_card">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                style="@style/CustomSubText"
                app:hintTextColor="@color/primaryBlue"
                android:hint="@string/enter_email"
                app:boxBackgroundMode="none"
                android:backgroundTint="@color/background_shadow"
                android:paddingBottom="10dp"
                app:hintAnimationEnabled="false"
                android:paddingRight="10dp"
                android:background="@color/background_shadow"
                android:textColorHint="@color/hint_color"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/emailEditText"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:textSize="14sp"
                    android:textColorHint="@color/hint_color"
                    android:background="@color/background_shadow"
                    android:minHeight="0dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>
<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:padding="5dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            app:cardCornerRadius="50dp"-->
<!--            app:cardElevation="0dp"-->
<!--            app:cardUseCompatPadding="false"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/email_card">-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="52dp"-->
<!--                style="@style/CustomSubText"-->
<!--                app:hintTextColor="@color/primaryBlue"-->
<!--                android:hint="Current Password"-->
<!--                app:endIconMode="password_toggle"-->
<!--                app:endIconTint="@color/primaryBlue"-->
<!--                app:boxBackgroundMode="none"-->
<!--                android:backgroundTint="@color/background_shadow"-->
<!--                android:paddingBottom="10dp"-->
<!--                app:hintAnimationEnabled="false"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@color/background_shadow"-->
<!--                android:textColorHint="@color/hint_color"-->
<!--                >-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:id="@+id/currentPassword"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:paddingLeft="16dp"-->
<!--                    android:paddingTop="5dp"-->
<!--                    android:textSize="14sp"-->
<!--                    android:textColorHint="@color/hint_color"-->
<!--                    android:background="@color/background_shadow"-->
<!--                    android:inputType="textPassword"-->
<!--                    android:minHeight="0dp"/>-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->


<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardVieww"-->
<!--            android:layout_width="match_parent"-->
<!--            android:padding="5dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            app:cardCornerRadius="50dp"-->
<!--            app:cardElevation="0dp"-->
<!--            app:cardUseCompatPadding="false"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/email_card">-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="52dp"-->
<!--                style="@style/CustomSubText"-->
<!--                app:hintTextColor="@color/primaryBlue"-->
<!--                android:hint="@string/enter_new_password"-->
<!--                app:endIconMode="password_toggle"-->
<!--                app:endIconTint="@color/primaryBlue"-->
<!--                app:boxBackgroundMode="none"-->
<!--                android:backgroundTint="@color/background_shadow"-->
<!--                android:paddingBottom="10dp"-->
<!--                app:hintAnimationEnabled="false"-->
<!--                android:paddingRight="10dp"-->
<!--                android:background="@color/background_shadow"-->
<!--                android:textColorHint="@color/hint_color"-->
<!--                >-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:id="@+id/updatePassword"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:paddingLeft="16dp"-->
<!--                    android:paddingTop="5dp"-->
<!--                    android:textSize="14sp"-->
<!--                    android:textColorHint="@color/hint_color"-->
<!--                    android:background="@color/background_shadow"-->
<!--                    android:inputType="textPassword"-->
<!--                    android:minHeight="0dp"/>-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->


<!--        </androidx.cardview.widget.CardView>-->


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changing"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>